# amusing

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml
amusing/: appconfig.example.yaml  cli.py  cli_operations.py
amusing/core/: download.py  download_library.py  metadata.py  musicbrainz.py  parse_csv.py  parse_xml.py  save_to_db.py  search.py
amusing/db/: engine.py  models.py
amusing/scripts/: README.md  am_download_all.py  am_parse.py  metadata.py
amusing/utils/: config.py  funcs.py
