[tool.poetry]
name = "amusing-app"
version = "0.4.1"
description = "CLI to download music independently and from your exported Apple Music library."
authors = ["Yash Prakash <yashprakash13@gmail.com>"]
readme = "README.md"
packages = [{include = "amusing"}]

[tool.poetry.scripts]
amusing = "amusing.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
brotli = "1.1.0"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
click = "8.1.7"
idna = "3.6"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
mutagen = "1.47.0"
numpy = "1.26.2"
pandas = "2.2.3"
pycryptodomex = "3.19.1"
pygments = "2.17.2"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
requests = "2.31.0"
rich = "13.7.0"
six = "1.16.0"
sqlalchemy = "*"
typer = "0.9.0"
typing-extensions = "*"
tzdata = "2023.3"
unidecode = "1.3.8"
urllib3 = "2.1.0"
websockets = "12.0"
yt-dlp = "2024.4.9"
ytmusicapi = "1.3.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
